fix: uform dep scheduler

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
     "micro-structure-cli": "^1.0.3",
+    "scheduler": "^0.16.2",
     "vue-cli-plugin-micro": "^1.0.2",
     "vue-template-compiler": "^2.6.10"
   }
